* Adyen: Add support for non-fractional currencies [molbrown] #3257
* Decidir: Add new gateway [jknipp] #3254
* Checkout V2: Reapply Update stored card flag [curiousepic]
* CyberSource: Update supported countries [molbrown] #3260
* Credorax: Update supported countries [molbrown] #3260
* Kushki: Update supported countries [molbrown] #3260
* Paypal: Update supported countries [molbrown] #3260

== Version 1.95.0 (May 23, 2019)
* Adyen: Constantize version to fix subdomains [curiousepic] #3228
* Qvalent: Adds support for standard stored credential framework [molbrown] #3227
* Cybersource: Send tokenization data when card is :master [pi3r] #3230

== Version 1.94.0 (May 21, 2019)
* Mundipagg: Fix number lengths for both VR and Sodexo [dtykocki] #3195
* Stripe: Support show and list webhook endpoints [jknipp] #3196
* CardConnect: Add frontendid parameter to requests [gcatlin] #3198
* Adyen: Correct formatting of Billing Address [nfarve] #3200
* Stripe: Stripe: Show payment source [jknipp] #3202
* Checkout V2: Checkout V2: Correct success criteria [curiousepic] #3205
* Adyen: Add normalized hash of 3DS 2.0 data fields from web browsers [davidsantoso] #3207
* Stripe: Do not attempt application fee refund if refund was not successful [jasonwebster] #3206
* Elavon: Send transaction_currency if currency is provided [gcatlin] #3201
* Elavon: Multi-currency support [jknipp] #3210
* Adyen: Support preAuths and Synchronous Adjusts [curiousepic] #3212
* WorldPay: Support Unknown Card Type [tanyajajodia] #3213
* Mundipagg: Make gateway_affiliation_id an option [curiousepic] #3219
* CyberSource: Adds Elo Card Type [tanyajajodia] #3220
* CyberSource: Support standalone credit for cards [curiousepic] #3225

== Version 1.93.0 (April 18, 2019)
* Stripe: Do not consider a refund unsuccessful if only refunding the fee failed [jasonwebster] #3188
* Stripe: Fix webhook creation for connected account [jknipp] #3193
* Adyen: Upgrade to v40 API version [davidsantoso] #3192
